--- a/OpenCV_async/AndroidManifest.xml
+++ b/OpenCV_async/AndroidManifest.xml
@@ -12,10 +12,12 @@
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
 	<uses-feature android:name="android.hardware.sensor.compass" android:required="true" />	
  
+ <uses-permission android:name="android.permission.INTERNET" />
  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> 
  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
-    <uses-feature android:glEsVersion="0x00020000" 
+ 
+ <uses-feature android:glEsVersion="0x00020000" 
               android:required="true" />
     
     <supports-screens android:resizeable="true"
